--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "nodemon": "^2.0.22",
     "rc-resize-observer": "^1.3.1",
     "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "react-dom": "^18.2.0"
   }
 }
